--- a/course-api/pom.xml
+++ b/course-api/pom.xml
@@ -11,6 +11,11 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.5.2.RELEASE</version>
 	</parent>
+	
+	<properties>
+	
+	</properties>
+	
 	<dependencies>
 
 
